--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,25 @@
+* {
+    box-sizing:border-box
+
+}
+
+body {
+    margin: 0;
+}
+
 .header {
     background-color: black;
     color: white;
     padding: 10px;
     text-align: center;
+}
+
+.footer {
+    background-color: #333;
+    color: white;
+    padding: 10px;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
 }
