--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,45 @@ body {
     text-align: center;
 }
 
+.formulario {
+    margin: 20px auto;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    max-width: 500px;
+}
+
+.label-input {
+    display: block;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+.input {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+
+}
+
+.btn-submit {
+background-color: #333;
+color: white;
+padding: 10px 20px;
+border: none;
+border-radius: 5px;
+font-size: 16px;
+cursor: pointer;
+width: 100%;
+}
+
+.btn-submit:hover {
+    background-color: #555;
+}
+
 .footer {
     background-color: #333;
     color: white;
